hphp/test/zend/bad/ext/mysql/tests/bug53649.php.skipif
<?php
require_once('skipif.inc');
require_once('skipifconnectfailure.inc');

if (!$link = my_mysql_connect($host, $user, $passwd, $db, $port, $socket)) {
	die(sprintf("skip Connect failed, [%d] %s\n", mysqlerrno(), mysqli_error()));
}

if (!mysql_query("DROP TABLE IF EXISTS test", $link) ||
	!mysql_query("CREATE TABLE test (dump1 INT UNSIGNED NOT NULL PRIMARY KEY) ENGINE=" . $engine, $link))
	die(sprintf("skip [%d] %s\n", mysql_errno($link), mysql_error($link)));

if (false === file_put_contents('bug53649.data', "1\n2\n3\n"))
	die(sprintf("skip Failed to create data file\n"));

if (!mysql_query("LOAD DATA LOCAL INFILE 'bug53649.data' INTO TABLE test", $link) &&
	1148 == mysql_errno($link))
		die("skip LOAD DATA LOAD INFILE not allowed\n");
?>